kubernetes/main/apps/dev/testing/plex/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-app
  namespace: default
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      # hostNetwork: true
      containers:
        - name: plex
          resources:
            limits:
              cpu: "2000m"
            requests:
              cpu: "500m"
          image: lscr.io/linuxserver/plex:latest
          ports:
            - containerPort: 32400
            - containerPort: 3005
            - containerPort: 8324
            - containerPort: 32469
            - containerPort: 1900
            - containerPort: 32410
            - containerPort: 32412
            - containerPort: 32413
            - containerPort: 32414
          volumeMounts:
            - mountPath: /media/tv
              name: atlas
              subPath: tv
            - mountPath: /media/anime
              name: atlas
              subPath: anime
            - mountPath: /media/movies
              name: atlas
              subPath: movies
            - mountPath: /config
              name: xfs-iscsi
            - mountPath: /etc/localtime
              name: localtime
            - mountPath: /transcode
              name: transcode
          imagePullPolicy: IfNotPresent
      volumes:
        - name: atlas
          persistentVolumeClaim:
            claimName: truenas-atlas
        - name: xfs-iscsi
          persistentVolumeClaim:
            claimName: plex-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: transcode
          emptyDir: {}
